--- a/KMvp/src/main/res/values/ids.xml
+++ b/KMvp/src/main/res/values/ids.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="error_view" type="id"/>
-    <item name="progress_bar" type="id"/>
+    <item name="progress_view" type="id"/>
 </resources>
